Renamed project type to template

--- a/app/views/estimates/new.html.haml
+++ b/app/views/estimates/new.html.haml
@@ -2,6 +2,6 @@
 = form_for(@estimate) do |e|
   = e.text_field :project, :placeholder => "Project name"
   = e.text_area :description, :placeholder => "Description"
-  = collection_select(:default, :project_type_id, ProjectType.all, :id, :name, {:include_blank => 'Project type (optional)'})
+  = collection_select(:estimate, :template, Template.all, :id, :name, {:include_blank => 'Project type (optional)'})
   = e.hidden_field :user_id, value: current_user.id
   = e.submit "Create project"
