--- a/app/views/pages/front.html.haml
+++ b/app/views/pages/front.html.haml
@@ -8,7 +8,7 @@
     %i.icon-menu
     Browse projects
     %span Browse and view all your projects.
-  /= link_to new_project_type_path, class: "wide-btn" do
+  /= link_to new_template_path, class: "wide-btn" do
   /  New template
   /  %span Create a new template with default tasks to use when starting new projects.
   = link_to settings_path, class: "wide-btn" do
