--- a/app/views/shared/_hidden_menu.html.haml
+++ b/app/views/shared/_hidden_menu.html.haml
@@ -9,7 +9,7 @@
   = link_to new_estimate_path do
     %i.icon-doc-new
     New project
-  = link_to new_project_type_path do
+  = link_to new_template_path do
     %i.icon-doc-new
     New templete
   = link_to estimates_path do
