--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -1,8 +1,8 @@
 - if params[:estimate_id]
   %h1 Edit task
   = render partial: 'edit_estimate_task_form'
-- elsif params[:project_type_id]
+- elsif params[:template_id]
   %h1 Edit default task
-  = render partial: 'edit_project_type_task_form'
+  = render partial: 'edit_template_task_form'
 - else
   %p There is something special about this task. It's too cool for editing. Let's keep it as is.
