Add basic invite mail for unregistered editors

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -132,6 +132,10 @@ header {
       a {
         display: block;
         line-height: 30px;
+
+        &:hover {
+          color: $dark-blue;
+        }
       }
     }
   }
