Move subtasks rendering into a separate partial

--- a/app/views/estimates/show.html.haml
+++ b/app/views/estimates/show.html.haml
@@ -33,9 +33,9 @@
               - unless t.rate.nil? or t.hours.nil?
                 = t.rate * t.hours
           %td
-            = link_to content_tag(:i, nil, class: "icon-flow-split"), new_child_task_path(t)
+            = link_to content_tag(:i, nil, class: "icon-flow-split"), new_child_task_path(t), title: "Split this task into sub tasks"
             = link_to content_tag(:i, nil, class: "icon-edit"), edit_estimate_task_path(@estimate, t)
-            = link_to content_tag(:i, nil, class: "icon-cancel"), estimate_task_path(@estimate, t), :method => :delete, class: "delete-icon", title: "Delete this task"
+            = link_to content_tag(:i, nil, class: "icon-cancel"), estimate_task_path(@estimate, t), :method => :delete, clas: "delete-icon", title: "Delete this task"
         - unless t.subtasks.empty?
           - t.subtasks.each do |sub|
             = render "/shared/subtask_tree", pre: 0, parent: t, task: sub
