Change hours and cost method names for estimates

--- a/app/views/estimates/show.html.haml
+++ b/app/views/estimates/show.html.haml
@@ -36,10 +36,10 @@
 
   %p.total
     Hours:
-    %span= @estimate.total_hours
+    %span= @estimate.hours
     |
-    Total fee:
-    %span= @estimate.total_cost
+    Total cost:
+    %span= @estimate.cost
 
 - else
   %p This project has no tasks. You should create some, tasks are awesome. Just press the leftest one of the nifty icons below.
