--- a/app/views/templates/new.html.haml
+++ b/app/views/templates/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New template
 = form_for(@template) do |p|
-  = p.text_field :name, :placeholder => "Template name"
-  = p.text_field :description, :placeholder => "Template description"
+  = p.text_field :name, placeholder: "Template name"
+  = p.text_field :description, placeholder: "Template description"
   = p.submit "Create template"
