Update template description

--- a/app/views/pages/settings.html.haml
+++ b/app/views/pages/settings.html.haml
@@ -11,4 +11,4 @@
 = link_to new_template_path, class: "btn" do
   %i.icon-doc-new
   New template
-  %span Create a template for new projects with default tasks and settings to build upon.
+  %span Create a template for new projects with default rates, tasks and other settings to build upon.
